# my-project-manager

./: .gitignore  .seed-stale.txt  HANDOVER.md  NOTICE  README.md  config.example.env  pyproject.toml  registry.example.yaml  registry.yaml
demo/: registry.yaml  seed_office_events.py
deploy/: backup.sh  install.sh  restore.sh
deploy/launchd/: com.mpm.report.daily.plist  com.mpm.report.resource.plist  com.mpm.report.weekly.plist  com.mpm.service.plist  com.mpm.web.plist  install.sh  run-report.sh  uninstall.sh
docs/: PACK-AUTHORING.md  action-gateway-explainer.md  architecture-comparison.md  code-standards.md  codebase-summary.md  deployment-guide.md  design-guidelines.md  e2e-comprehensive-v1-v8-report.md  huong-dan-su-dung.md  interview-cheat-sheet-1-page.md  interview-prep-ai-product-po.md  project-changelog.md  project-overview-pdr.md  project-roadmap.md  reference-deerflow-2-architecture.md  system-architecture.md  uat-nghiem-thu-cac-case-quan-trong.md  uat-theo-user-story.md  v2-vision-roadmap.md
docs/journals/: 260621-phase-0-scaffold.md  (+59 more)
scripts/: demo-mode.sh
skills/: fetch-jira-epics.md
tests/: conftest.py  test_action_gateway.py  test_adjust_team_task_toctou.py  test_admin_pack.py  test_agent_isolation.py  test_agent_knowledge_form.py  test_agent_runtime_seam.py  test_agent_skills_dir.py  test_agent_telegram_bind.py  test_agents_admin_api.py  test_agents_register_existing.py  test_agentskills_io_format.py  test_amend_hash_excludes_system_inserted.py  test_amend_over_amend_reject.py  test_amend_pending_only_swap.py  test_amend_pic_aware_and_company_roundtrip.py  test_approval_gate_auto.py  test_approval_gate_interrupt.py  test_approval_gate_okr_resource.py  test_ask_agent_inbox.py  test_assign_auto_confirm_and_pic_wiring.py  test_audience_delivery.py  test_audience_prompts.py  test_audit_log.py  test_auto_approve_policy.py  test_automation_engine.py  test_automation_redline.py  test_automation_schema.py  test_budget_tracker.py  test_capability_block.py  test_channel_registry.py  test_chat_command.py  test_checkpointer_selection.py  test_cli_adapter.py  test_cli_profile_routing.py  test_company.py  test_config_builders.py  test_confirm_swap_vs_reserve_race.py  test_confluence_write.py  test_consult_projection.py  (+134 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+605 files in other folders)
