[project]
name = "my-project-manager"
version = "0.0.0"
description = "Autonomous LangGraph agent that automates PM/SM/Team-Lead work across Slack, Jira, Confluence, GitHub."
requires-python = ">=3.12"
dependencies = [
    "croniter>=6.2.2",
    "fastapi>=0.136",
    "jinja2>=3.1",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters==0.3.0",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langsmith>=0.8.18",
    "openai>=2.43.0",
    # psycopg[binary] bundles libpq so the Postgres path imports without a system
    # libpq install (M2-P8 — Postgres is opt-in; the binary wheel keeps the default
    # SQLite install self-contained on macOS/Linux without external libpq).
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sse-starlette>=2.1",
    "uvicorn>=0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# snake_case Python, type hints on public fns (code-standards.md)
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
